--- a/QuestTrack/app/src/main/AndroidManifest.xml
+++ b/QuestTrack/app/src/main/AndroidManifest.xml
@@ -13,12 +13,15 @@
         android:theme="@style/Theme.QuestTrack"
         tools:targetApi="31">
         <activity
-            android:name=".LogActivity"
-            android:exported="false" />
-        <activity
             android:name=".LogScreen"
             android:exported="false"
             android:theme="@style/Theme.QuestTrack" />
+        <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".LogActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
