--- a/QuestTrack/gradle/libs.versions.toml
+++ b/QuestTrack/gradle/libs.versions.toml
@@ -1,5 +1,10 @@
 [versions]
+activityVersion = "1.4.0"
 agp = "8.3.2"
+androidxJunit = "1.1.3"
+appcompatVersion = "1.4.0"
+constraintlayoutVersion = "2.1.3"
+espressoCoreVersion = "3.4.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
@@ -7,19 +12,30 @@ appcompat = "1.6.1"
 material = "1.10.0"
 activity = "1.8.0"
 constraintlayout = "2.1.4"
+materialVersion = "1.5.0"
 navigationFragment = "2.6.0"
+navigationFragmentVersion = "2.4.0"
 navigationUi = "2.6.0"
+navigationUiVersion = "2.4.0"
 
 [libraries]
+activity-v140 = { module = "androidx.activity:activity", version.ref = "activityVersion" }
+appcompat-v140 = { module = "androidx.appcompat:appcompat", version.ref = "appcompatVersion" }
+constraintlayout-v213 = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayoutVersion" }
+espresso-core-v340 = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoCoreVersion" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+junit-v113 = { module = "androidx.test.ext:junit", version.ref = "androidxJunit" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+material-v150 = { module = "com.google.android.material:material", version.ref = "materialVersion" }
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
+navigation-fragment-v240 = { module = "androidx.navigation:navigation-fragment", version.ref = "navigationFragmentVersion" }
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
+navigation-ui-v240 = { module = "androidx.navigation:navigation-ui", version.ref = "navigationUiVersion" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
