--- a/QuestTrack/app/build.gradle
+++ b/QuestTrack/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation libs.constraintlayout.v213
     implementation libs.navigation.fragment.v240
     implementation libs.navigation.ui.v240
+    implementation libs.activity.v140
     testImplementation libs.junit
     androidTestImplementation libs.junit.v113
     androidTestImplementation libs.espresso.core.v340
