--- a/QuestTrack/gradle/libs.versions.toml
+++ b/QuestTrack/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ androidxJunit = "1.1.3"
 appcompatVersion = "1.4.0"
 constraintlayoutVersion = "2.1.3"
 espressoCoreVersion = "3.4.0"
+gson = "2.10.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
@@ -23,6 +24,7 @@ activity-v140 = { module = "androidx.activity:activity", version.ref = "activity
 appcompat-v140 = { module = "androidx.appcompat:appcompat", version.ref = "appcompatVersion" }
 constraintlayout-v213 = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayoutVersion" }
 espresso-core-v340 = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoCoreVersion" }
+gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
