--- a/QuestTrack/app/src/main/AndroidManifest.xml
+++ b/QuestTrack/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
             android:name=".LogView"
             android:exported="false" />
         <activity
+            android:name=".FileListActivity"/>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
